[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4"] }
prost = "0.8"
protos = { path = "../protos" }
tonic = "0.5"
tokio = { version = "1.2", features = ["full"] }
clap =  { version = "4", features = ["derive"] }
hex = "0.4"
secp256k1 = { version = "0.28.0", features = ["rand", "rand-std"] }
sha2 = "0.10"
