[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4"] }
prost = "0.8"
protos = { path = "../protos" }
tonic = "0.5"
tokio = { version = "1.2", features = ["full"] }
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
rand = "0.8"
hex = "0.4.3"
sha2 = "0.10"
